--- a/appsettings.json
+++ b/appsettings.json
@@ -1,8 +1,10 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+  "Data":
+  {
+  "CommandAPIConnection":
+    {
+      "ConnectionString":"Server=NIRVANA\\SQLEXPRESS;Database=otopark;Trusted_Connection=True"
     }
-  },
-  "AllowedHosts": "*"
+  }
+
 }
